revert pom