@@ -16,7 +16,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 
-		<synapse.version>develop-SNAPSHOT</synapse.version>
+		<synapse.version>2013-01-10-9ccedd3-284</synapse.version>
 
 		<gwtVersion>2.4.0</gwtVersion>
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
@@ -160,9 +160,6 @@
 				<version>2.4.0</version>
 				<executions>
 					<execution>
-						<configuration>
-							<extraJvmArgs>-Xss512m -Xmx1024m -XX:MaxPermSize=1024m</extraJvmArgs>
-						</configuration>
 						<goals>
 							<goal>clean</goal>
 							<goal>compile</goal>
